--- a/views/error/404.html
+++ b/views/error/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>404</title>
 </head>
 <body>
-	{{ msg }}
+	404
 </body>
 </html>
