--- a/views/article/article.html
+++ b/views/article/article.html
@@ -23,86 +23,35 @@
 		<!--文章区域-->
 		<section class="grey-bg">
 			<div class="category">
-				<span class="category-item byy-btn small danger">linux</span>
-				<span class="category-item byy-btn small danger">javascript</span>
-				<span class="category-item byy-btn small danger">css</span>
-				<span class="category-item byy-btn small danger">jquery</span>
-
+				{{each category value i}}
+				<span class="category-item byy-btn small danger {{c == value.id ? 'selected' : ''}}" filter="category" data-id="{{value.id}}">{{value.name}}</span>
+				{{/each}}
 			</div>
 			<div class="section-content byy-clear">
+				{{ if article.length == 0}}
+				<div class="empty" style="width:100%;height:350px;line-height:350px;text-align:center;">
+					暂无文章，博主正在紧急加班赶写中.....
+				</div>
+				{{ /if }}
+				{{ each article value i}}
 				<article>
-					<a href="/" target="_blank">
-						<div class="post" style="background-image: url(/upload/banner/2.jpg)"></div>
+					<a href="{{value.link}}" target="_self">
+						<div class="post" style="background-image: url({{value.postpath}})"></div>
 					</a>
 					<div class="article-title">
-						<a href="/" target="_blank">github 如何开通自己的个人博客github 如何开通自己的个人博客</a>
+						<a href="{{value.link}}" target="_blank">{{value.title}}</a>
 					</div>
 					<div class="article-info">
-						2017年2月11号 阅读(222) 评论(222) 
-						<span class="zan">
-							<i class="byyicon icon-zan"></i>(2)
+						{{value.ctime}} 阅读({{value.readnum}})
+						<span class="zan pull-right" data-id="{{value.id}}">
+							<i class="byyicon icon-star-on"></i>({{value.likenum}})
 						</span>
 					</div>
 				</article>
-				<article>
-					<a href="/" target="_blank">
-						<div class="post" style="background-image: url(/upload/banner/2.jpg)"></div>
-					</a>
-					<div class="article-title">
-						<a href="/" target="_blank">github 如何开通自己的个人</a>
-					</div>
-					<div class="article-info">
-						2017年2月11号 阅读(222) 评论(222) 
-						<span class="zan">
-							<i class="byyicon icon-zan"></i>(2)
-						</span>
-					</div>
-				</article>
-				<article>
-					<a href="/" target="_blank">
-						<div class="post" style="background-image: url(/upload/banner/2.jpg)"></div>
-					</a>
-					<div class="article-title">
-						<a href="/" target="_blank">github 如何开通自己的个人博客github 如何开通自己的个人博客</a>
-					</div>
-					<div class="article-info">
-						2017年2月11号 阅读(222) 评论(222) 
-						<span class="zan">
-							<i class="byyicon icon-zan"></i>(2)
-						</span>
-					</div>
-				</article>
-				<article>
-					<a href="/" target="_blank">
-						<div class="post" style="background-image: url(/upload/banner/2.jpg)"></div>
-					</a>
-					<div class="article-title">
-						<a href="/" target="_blank">github 如何开通自己的个人博客github 如何开通自己的个人博客</a>
-					</div>
-					<div class="article-info">
-						2017年2月11号 阅读(222) 评论(222) 
-						<span class="zan">
-							<i class="byyicon icon-zan"></i>(2)
-						</span>
-					</div>
-				</article>
-				<article>
-					<a href="/" target="_blank">
-						<div class="post" style="background-image: url(/upload/banner/2.jpg)"></div>
-					</a>
-					<div class="article-title">
-						<a href="/" target="_blank">github 如何开通自己的个人博客github 如何开通自己的个人博客</a>
-					</div>
-					<div class="article-info">
-						2017年2月11号 阅读(222) 评论(222) 
-						<span class="zan">
-							<i class="byyicon icon-zan"></i>(2)
-						</span>
-					</div>
-				</article>
+				{{ /each }}
 			</div>
 			<!--分页-->
-			<div class="page text-center">
+			<div class="page text-center" data-total="{{total}}" data-page="{{page}}">
 				
 			</div>
 		</section>
@@ -120,15 +69,72 @@
 			indicator : 'none',
 			interval : 5000
 		});
-
+		var total = $('.page').data('total'),
+			page = $('.page').data('page');
 		byy.page({
 			selector : '.page',
-			total : 100,
+			total : total,
 			pagesize : 20,
-			curr : 1,
+			always : true,
+			curr : page,
 			callback : function(p){
-				console.log(p);
+				//处理
+				var c = byy.getSearch('c');
+				var str = '';
+				if(c){
+					str = '&c='+c;
+				}
+				location.href = '/article/?p='+p.page+str;
 			}
 		});
+		byy.bindEvents({
+			addZan : function(data){
+				var id = data.id;
+				var $zan = $(this);
+				if($zan.hasClass('has')){
+					return;
+				}
+				$.ajax({
+					url : '/article/zan',
+					type : 'post',
+					data : {id : id},
+					success : function(res){
+						if(res.success){
+							byy.win.msg('您的点赞是我最大的动力.感谢~~');
+							$zan.addClass('has');
+							//更新数据
+							var arr = storage('zan').result || {};
+							arr[id] = true;
+							storage('zan',arr);
+						}else{
+							$zan.addClass('has');//假赞
+						}
+					}
+				});
+			},
+			category : function(data){
+				var id = data.id;
+				location.href = '/article/?c='+id;
+			}
+		});
+		//检查是否已经点赞
+		function checkZan (){
+			var zan = storage('zan'),
+				arr = zan.result;
+			$('.zan').each(function(){
+				var id = $(this).data('id');
+				var has = false;
+				for(var item in arr){
+					if(item == id){
+						has = true;
+					}
+				}
+				if(has){
+					$(this).addClass('has');
+				}
+			})
+		}
+
+		checkZan();//初始化检查
 	})
 </script>
