--- a/views/center/article/add.html
+++ b/views/center/article/add.html
@@ -4,81 +4,259 @@
 	<meta charset="UTF-8">
 	<title>发布文章</title>
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
-	<link rel="stylesheet" href="/center/css/home.css">
+	<link rel="stylesheet" href="/center/css/editor.css">
+	<link rel="stylesheet" href="/article/article.css">
 </head>
-<body class="grey-bg frame-body">
+<body class="grey-bg ">
 	<div class="base-info byy-form">
-		<div class="byy-form-item">
-			<label for="" class="byy-label">标题:</label>
-			<div class="byy-block fw">
-				<input type="text" name="title" class="byy-form-ipt" autocomplete="off">
-			</div>
+		<div class="post-path">
+			<input type="hidden" name="id" value="{{article.id ? article.id : ''}}">
+			<input type="hidden" name="postpath" value="{{article.postpath ? article.postpath : ''}}">
+			<input type="hidden" name="type" value="{{article.type ? article.type : '0'}}">
+			<input type="hidden" name="ispublish" value="{{article.ispublish ? article.ispublish : '0'}}">
+			<img src="{{article.postpath}}" alt="">
 		</div>
-		<div class="byy-form-item">
-			<label for="" class="byy-label">属性:</label>
-			<div class="byy-block fw">
-				<span>
-					<input type="checkbox" class="byy-form-checkbox" byy-skin="switch" checked byy-before="是原创" byy-after="非原创">	
-				</span>
-				<span>
-					<input type="checkbox" class="byy-form-checkbox" byy-skin="switch" checked byy-before="可以评论" byy-after="不能评论">	
-				</span>
+		<div class="article-info">
+			<div class="top-info byy-clear">
+				<div>
+					<input type="text" name="title" autocomplete="off" style="width:250px" placeholder="文章的标题" value="{{article.title}}">
+				</div>
+				<div>
+					<input type="text" name="enname" autocomplete="off" style="width:250px" placeholder="文章的路径" value="{{article.enname}}">
+				</div>
+				<div>
+					<select name="category" class="byy-form-select" style="width:250px;">
+						{{ each category value i}}
+						<option value="{{value.id}}" {{article.category == value.id ? 'checked' : ''}}>{{value.name}}</option>
+						{{ /each }}
+					</select>
+				</div>
+				<div>
+					<input type="text" autocomplete="off" style="width:250px;" placeholder="输入回车" name="tagipt">
+				</div>
 			</div>
-		</div>
-		<div class="byy-form-item">
-			<label for="" class="byy-label">类别:</label>
-			<div class="byy-block fw">
-				<select name="" id="" class="byy-form-select">
-					<option value="linux">linux</option>
-					<option value="javascript">javascript</option>
-				</select>
+			<div class="center-info byy-clear">
+				<textarea name="zhaiyao" style="width:770px;float:left;" placeholder="摘要来一段，回头再更新">{{article.zhaiyao}}</textarea>
+				<div style="width:500px;height:100px;float:left;" class="tagdiv">
+					{{each article.tags value i}}
+					<span class="tag" filter="removeTag">{{value}}</span>
+					{{/each}}
+				</div>
 			</div>
-		</div>
-		<div class="byy-form-item">
-			<label for="" class="byy-label">英文路径:</label>
-			<div class="byy-block fw">
-				<input type="text" name="enname" autocomplete="off" >
-			</div>
-		</div>
-		<div class="byy-form-item">
-			<label for="" class="byy-label">标签:</label>
-			<div class="byy-block fw">
-				<input type="text" name="tags" autocomplete="off"  style="width:100px;">
-			</div>
-		</div>
-		<div class="byy-form-item">
-			<label for="" class="byy-label">封面:</label>
-			<div class="byy-block fw">
-				<span class="byy-btn small danger">上传封面</span>
-				<div class="banner-show">
-					<img src="" alt="">
+			<div class="bottom-tool byy-clear">
+				<div>
+					<input type="checkbox" name="ismy" class="byy-form-checkbox" byy-skin="switch" {{article.ismy == 0 ? '' : 'checked'}} byy-before="是原创" byy-after="非原创">	
+				</div>
+				<div>
+					<input type="checkbox" name="cancomment" class="byy-form-checkbox" byy-skin="switch" {{article.cancomment == 0 ? '' :'checked'}}  byy-before="可以评论" byy-after="不能评论">	
+				</div>
+				<div>
+					<span class="byy-btn small danger" id="upload">上传封面</span>
+				</div>
+				<div>
+					<span class="byy-btn small" filter="save">保存记录</span>
+				</div>
+				<div>
+					<span class="byy-btn small" filter="full">进入全屏模式</span>
+				</div>
+				<div>
+					<span class="byy-btn warm small" filter="preview">预览</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- 可隐藏收缩-->
-	<div class="line text-center">
-		<span class="byy-btn mini">全屏书写</span>
-	</div>
 	<!--编辑器-->
 	<div class="editor byy-clear">
+		<span class="exitfull" filter="exitfull">
+			<i class="byyicon icon-arrow-down"></i>
+		</span>
 		<!--左侧编辑器-->
 		<div class="left-editor">
 			<div class="tool-list">
 				
 			</div>
 			<div class="editor-content">
-				<textarea name="content">1</textarea>
+				<textarea name="content" id="content">{{article.content}}</textarea>
 			</div>
 		</div>
 		<!--右侧文章预览区域-->
-		<div class="right-preview">
+		<div class="right-preview article-detail">
 			
 		</div>
 	</div>
 </body>
 </html>
 {{ include '../../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/marked/marked.min.js"></script>
+<script type="text/javascript" src="/plugins/highlight/highlight.pack.js"></script>
 <script type="text/javascript">
-	
+	byy.require(['jquery','win','uploader'],function(){
+
+
+	    $.fn.extend({
+	        insertAtCaret : function (myValue) {
+	            var $t = $(this)[0];
+	            if (document.selection) {
+	                this.focus();
+	                var sel = document.selection.createRange();
+	                sel.text = myValue;
+	                this.focus();
+	            } else
+	                if ($t.selectionStart || $t.selectionStart == '0') {
+	                    var startPos = $t.selectionStart;
+	                    var endPos = $t.selectionEnd;
+	                    var scrollTop = $t.scrollTop;
+	                    $t.value = $t.value.substring(0, startPos) + myValue + $t.value.substring(endPos, $t.value.length);
+	                    this.focus();
+	                    $t.selectionStart = startPos + myValue.length;
+	                    $t.selectionEnd = startPos + myValue.length;
+	                    $t.scrollTop = scrollTop;
+	                } else {
+	                    this.value += myValue;
+	                    this.focus();
+	                }
+	        }
+	    });
+
+
+		byy.bindEvents({
+			//全屏模式
+			full : function(){
+				$('.base-info').addClass('hide');
+				$('.editor').addClass('full');
+			},
+			exitfull : function(){
+				$('.base-info').removeClass('hide');
+				$('.editor').removeClass('full');	
+			},
+			save : function(){
+				var values = byy('.base-info').getValues();
+				values.cancomment = values.cancomment == 'on' ? 1 : 0;
+				values.ismy = values.ismy == 'on' ? 1 : 0;
+				values.link = '/article/'+values.enname+'.html';
+				values.tags = [];
+				$('.tag').each(function(dom){
+					var v = $(this).text();
+					if(v!= ''){
+						values.tags.push(v);
+					}
+				});
+				values.tags = values.tags.join(',');
+				$.ajax({
+					url : '/center/article/save',
+					type : 'post',
+					data : values,
+					success : function(res){
+						if(!res.success){
+							byy.win.msg('保存失败，请检查')
+						}else{
+							$('[name="id"]').val(res.id);
+						}
+					}
+				});
+			},
+			removeTag : function(){
+				$(this).remove();
+			},
+			//预览
+			preview : function(){
+				var enname = $('[name="enname"]').val();
+				window.open('/article/'+enname+'.html');
+			}
+		});
+
+
+
+		//上传
+		byy.uploader().simpleImage({
+			server : '/center/upload',
+			selector : '#upload',
+			onSuccess : function(file,res){
+				$('.post-path img').attr('src',res.result.filePath);
+				$('[name="postpath"]').val(res.result.filePath);
+			}
+		});
+
+		//textarea 绑定change事件
+		$('body').on('keyup','[name="content"]',byy.debounce(render,1000,true))
+		$('body').on('keyup','[name="tagipt"]',function(ev){
+			if(ev.keyCode === 13){
+				var v = $('[name="tagipt"]').val();
+				v = $.trim(v);
+				if(v){
+					$('.tagdiv').append('<span class="tag" filter="removeTag">'+v+'</span>');
+					$(this).val('');
+				}
+			}
+		})
+
+		//图片复制
+		//paste 绑定事件
+		document.getElementById('content').addEventListener('paste',function(event){
+			if(event.clipboardData.items[0].type.indexOf('image') > -1){
+				var reader = new FileReader(),
+				    file = event.clipboardData.items[0].getAsFile();
+				reader.onload = function(e){
+				    //this.result 可以得到图片的base64
+				    var urldata = this.result;
+				    $.ajax({
+				    	url : '/center/article/paste',
+				    	type : 'post',
+				    	data : {imgData : urldata},
+				    	success : function(res){
+				    		$('#content').insertAtCaret('![]('+res+')');
+				    	}
+				    });
+				}
+				reader.readAsDataURL(file);
+			}else{
+				return false;
+			}
+			return false;
+		});
+		/**
+		 * 渲染markdown样式
+		 **/
+		function render(){
+			var content = $('[name="content"]').val();
+			$('.right-preview').html(marked(content));
+			update(content);
+			highlight();
+			checkImg();
+		}
+		render();
+		function highlight(){
+			$('pre code').each(function(i, block) {
+		    	hljs.highlightBlock(block);
+		  	});
+		}
+		function checkImg(){
+			$('p>img').each(function(){
+				$(this).parent().addClass('img-wrap');
+				var alt = $(this).attr('alt') || '示例图';
+				$(this).after('<div class=""><div class="img-caption">'+alt+'</div></div>');
+			});
+		}
+		//与渲染同频率进行内容更新
+		function update(content){
+			var id = $('input[name="id"]').val();
+			if(!id){
+				byy.win.msg('该记录还未保存，请尽快保存')
+				return;
+			}
+			$.ajax({
+				url : '/center/article/update',
+				type : 'post',
+				data : {
+					id : id,
+					content : content
+				},
+				success : function(res){
+					if(!res.success){
+						byy.win.msg('文章内容保存失败，请检查')
+					}	
+				}
+			});
+		}
+	});
 </script>
