--- a/views/demos/index.html
+++ b/views/demos/index.html
@@ -7,6 +7,7 @@
 	<meta name="content" content="把工作、生活中自己学习、感兴趣的小页面或工具集中在一起，以后再有类型的需求可以直接进行参考，也欢迎大家发邮件把自己想要实现的一些页面或小工具发给我，我会尽力实现的。@mailto:chrunlee@foxmail.com">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
+	<link rel="stylesheet" href="/article/index.css">
 	<style>
 		.trs{
 			-webkit-transition: all .3s ease;
@@ -45,20 +46,8 @@
 	</style>
 </head>
 <body class="grey-bg">
-	<header>
-		<ul class="byy-nav byy-nav-nobar black-bg">
-			<li class="byy-nav-item byy-this">
-				<a href="/">Lab —— 我的实验室</a>
-			</li>
-			<span class="pull-right">
-				<input type="text" class="byy-form-input" id="search" placeholder="内容检索,请回车" autofocus>
-				<span class="info">powered by chrunlee / 2017</span>
-			</span>
-		</ul>
-	</header>
-	<div class="search green-c" style="text-align:center;">
-		
-	</div>
+	{{ include '../tpl/header'}}
+
 	<div class="container-fluid">
 		<div class="block-wrap byy-clear">
 			<div class="demo-block trs">
@@ -238,7 +227,7 @@
 	</div>
 </body>
 </html>
-<script type="text/javascript" src="/plugins/byy/byy.js"></script>
+{{ include '../tpl/commonjs.art'}}
 <script type="text/javascript">
 	byy.require(['jquery','win'],function(){
 		$('#search').on('keyup',function(ev){
