--- a/public/article/detail.less
+++ b/public/article/detail.less
@@ -45,6 +45,14 @@ body{
 			color:#999;
 			font-size:12px;
 			font-family: @font;
+			.tags{
+				border: 1px solid #49e;
+			    padding: 2px 4px;
+			    margin-left: 5px;
+			    margin-right: 5px;
+			    background-color: #529bc5ee;
+			    color: white;
+			}
 		}
 	}
 	/*赞赏*/
