--- a/views/error/500.html
+++ b/views/error/500.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>404 Page not found | {{site.sitename}}</title>
+	<title>500 Internal server error | {{site.sitename}}</title>
 	<style>
 		html,body{
 			width:100%;height:100%;margin:0px;
@@ -34,9 +34,9 @@
 	</div>
 	<div class="content">
 		<div class="left-content">
-			<h1>Oops!</h1>
+			<h1>Shoot!</h1>
 			<h4>
-				We can't seem to find the page you're looking for.	
+				Well, this is unexpected…
 			</h4>
 			<div class="other">
 				<p>您可以点击这里查看其他的内容：</p>	
