--- a/public/article/index.less
+++ b/public/article/index.less
@@ -106,6 +106,7 @@ section{
 				background-position: center center;
 				border-radius:10px;
 				box-shadow:0px 0px 10px 1px rgba(0,0,0,0.3);
+				background-size:100%;
 				background-repeat:no-repeat;
 			}
 			.article-title{
