--- a/public/article/detail.less
+++ b/public/article/detail.less
@@ -305,7 +305,7 @@ body{
 				color:#f2f2f2;
 				font-family: @font;
 				height:30px;
-				line-height:30px;
+				line-height:50px;
 				a{
 					color:inherit;
 				}
@@ -314,7 +314,7 @@ body{
 				font-size:12px;
 				color:#999;
 				font-family: @font;
-				padding:5px;
+				padding:15px 5px;
 			}
 		}
 	}
