--- a/public/article/article.less
+++ b/public/article/article.less
@@ -27,6 +27,7 @@
 	}
 	p{
 		margin:0 0 25px;
+		white-space:pre-line;
 	}
 	img{
 		max-width:100%;
@@ -218,5 +219,9 @@
 
 	.hljs-link {
 		text-decoration: underline;
+	}
+	.hljs-comment{
+		color:#b38022;
+		font-style:normal;
 	}
 }
