--- a/public/article/index.less
+++ b/public/article/index.less
@@ -168,74 +168,43 @@ section.dark{
 }
 .footer{
 	height:250px;
-}
-.footer-info{
-	width:20%;
-	float:left;
-	.footer-info-title{
-		img{
-			width:20px;
-			height:20px;
+	.footer-block{
+		width:30%;
+		float:left;
+		min-height:200px;
+		font-size:1em;
+		color:#f2f2f2;
+		p{line-height:2em;}
+		a{color:inherit;text-decoration:none;}
+		img{width:1.5em;height:1.5em;}
+		.footer-block-content{
+			margin-top:2em;
+			font-size:0.8em;
+			color:#999;
 		}
-		font-size:1.4em;
+		.link-block{
+			color:#ccc;
+			width:30%;
+			display:inline-block;
+			text-align:center;
+		}
 	}
-	.footer-info-des{
-		color:#888484;
-		padding-right:5em;
-		margin-top:2em;
-		font-size:0.5em;
-	}
-}
-.footer-scan{
-	width:20%;
-	float:left;
-	text-align:center;
-	height:200px;
-	/* border-left:1px solid #888484; */
-	img{
-		width:100px;
-		height:100px;
-	}
-	p{
-		color:#888484;
-		font-size:0.5em;
+	/*生命*/
+	.footer-copy{
+		position:absolute;
+		bottom:0px;
+		left:0px;
+		width:100%;
+		display:block;
+		font-size:12px;
 		text-align:center;
+		height:40px;
+		line-height:40px;
+		color:#999;
+		span{margin:0px 10px;}
 	}
 }
-.footer-tool{
-	width:20%;
-	float:left;
-	padding:1em;
-	height:200px;
-	/* border-right:1px solid #888484; */
-	box-sizing:border-box;
-	>span{
-		margin-right:30px;
-		color:#ccc;
-	}
-}
-.footer-public{
-	padding:0px!important;
-	height:40px;
-	line-height: 40px;
-	font-size:0.8em;
-	color:#ccc!important;
-	a{
-		margin-right:30px;
-	}
-}
-.footer-copy{
-	position:absolute;
-	bottom:0px;
-	left:0px;
-	width:100%;
-	display:block;
-	font-size:12px;
-	text-align:center;
-	height:40px;
-	line-height:40px;
-	color:#999;
-}
+
 
 
 
