--- a/views/caipu/detail.html
+++ b/views/caipu/detail.html
@@ -164,4 +164,4 @@ $(function(){
 	}
 });
 </script>
-<script type="text/javascript" src="/plugins/tongji.js"></script>
+{{ include '../tpl/tongji'}}
