--- a/views/caipu/search.html
+++ b/views/caipu/search.html
@@ -56,6 +56,7 @@
 	</footer>
 </body>
 </html>
+
 <script type="text/javascript" src="/plugins/jquery/jquery.js"></script>
 <script type="text/javascript">
 	var page = 1;
@@ -101,4 +102,4 @@
 
 
 </script>
-<script type="text/javascript" src="/plugins/tongji.js"></script>
+{{ include '../tpl/tongji'}}
