--- a/public/article/detail.less
+++ b/public/article/detail.less
@@ -288,7 +288,7 @@ body{
 		.command-article{
 			position:relative;
 			border-bottom:1px dashed #6d6868;
-			height:120px;
+			min-height:120px;
 			padding-right:120px;
 			overflow:hidden;
 			>a{
@@ -304,17 +304,18 @@ body{
 				font-size:18px;
 				color:#f2f2f2;
 				font-family: @font;
-				height:30px;
-				line-height:50px;
+				line-height:20px;
+				display:block;
 				a{
 					color:inherit;
+					display:block;
 				}
 			}
 			.des{
 				font-size:12px;
 				color:#999;
 				font-family: @font;
-				padding:15px 5px;
+				padding:5px 5px;
 			}
 		}
 	}
