--- a/public/article/detail.less
+++ b/public/article/detail.less
@@ -306,6 +306,7 @@ body{
 				font-family: @font;
 				line-height:20px;
 				display:block;
+				margin-top:10px;
 				a{
 					color:inherit;
 					display:block;
