--- a/views/article/detail.html
+++ b/views/article/detail.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="/article/detail.css">
 </head>
 <body class="grey-bg fixed">
-	<div style="width:0px;height:0px;overflow:hidden;line-height:0px;font-size:0px;"><img alt="{{article.title}}" src="{{article.postpath}}" style="width:484px;height:300px;"/></div>
+	<div style="width:0px;height:0px;overflow:hidden;line-height:0px;font-size:0px;"><img alt="{{article.title}}" src="{{article.postpath}}" width="0px" height="0px" /></div>
 	{{ include '../tpl/header.art'}}
 	<div class="detail-wrap">
 		<input type="hidden" name="id" value="{{article.id}}">
