--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,8 @@
 	<title>{{site.sitename}}</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta http-equiv="Cache-Control" content="no-siteapp">
+	<meta name="keywords" content="BUG集散地,迅哥博客,chrunlee.cn">
+	<meta name="description" content="{{site.sitedes}}">
 	<meta name="baidu-site-verification" content="lub4jGpHHt" />
 	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
