--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
 	<meta name="keywords" content="BUG集散地,迅哥博客,chrunlee.cn">
 	<meta name="description" content="{{site.sitedes}}">
 	<meta name="baidu-site-verification" content="lub4jGpHHt" />
+	<meta name="360-site-verification" content="ee3119a0600c05527f0448700baaabc0" />
 	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
 	<link rel="stylesheet" href="/article/index.css">
