--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="{{site.sitedes}}">
 	<meta name="baidu-site-verification" content="lub4jGpHHt" />
 	<meta name="360-site-verification" content="ee3119a0600c05527f0448700baaabc0" />
+	<meta name="google-site-verification" content="1bzfV62Y3T2gkw5WajUypEXz9RdDKgn5ezZVENwWhts" />
 	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
 	<link rel="stylesheet" href="/article/index.css">
